# network-attacks-ex1

./: .gitignore  README.md  adapter_setup.sh  app.js  defence.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rerouting_magic.sh  scanner.py  server.py  setup_run.sh
active_portal/: cert.pem  package-lock.json
active_portal/public/: response.html
captive_portal/: app.js  csr.pem  key.pem
public/: index.html
