[tool.poetry]
name = "network-attacks-ex1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "network_attacks_ex1"}]

[tool.poetry.dependencies]
python = "^3.9"
scapy = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
